--- a/shop.html
+++ b/shop.html
@@ -18,7 +18,7 @@
     <!-- Load fonts style after rendering the layout styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
     <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-    <link rel="stylesheet" href="assets/css/cart.css">
+    <link rel="stylesheet" href="./assets/css/cart.css">
 
 </head>
 
@@ -950,13 +950,13 @@
     <!-- End Footer -->
 
     <!-- Start Script -->
-    <script src="assets/js/jquery-1.11.0.min.js"></script>
-    <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/templatemo.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <script src="/assets/js/cart.js"></script>
-    <script src="/assets/js/login.js"></script>
+    <script src="./assets/js/jquery-1.11.0.min.js"></script>
+    <script src="./assets/js/jquery-migrate-1.2.1.min.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./ssets/js/templatemo.js"></script>
+    <script src="./assets/js/custom.js"></script>
+    <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/login.js"></script>
     <!-- End Script -->
 </body>
 
