--- a/shop.html
+++ b/shop.html
@@ -229,7 +229,7 @@
                                     <ul class="list-unstyled">
                                         <li><a class="btn btn-success text-white" href="shop-single.html"><i class="far fa-heart"></i></a></li>
                                         <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i class="far fa-eye"></i></a></li>
-                                        <li><a class="btn btn-success text-white mt-2" add-to-cart><i class="fas fa-cart-plus"></i></a></li>
+                                        <li><a class="btn btn-success text-white mt-2 add-to-cart"><i class="fas fa-cart-plus"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -686,7 +686,41 @@
     </div>
     <!-- End Content -->
     <!-- cart -->
-    
+    <!-- <section class="cart" style="margin-top: 70px;"> -->
+        <!-- <h2>Gio Hang</h2>
+        <hr>
+        <form action="">
+            <table>
+                <thead>
+                    <tr>
+                        <th> san pham</th>
+                        <th>gia</th>
+                        <th>so luong</th>
+                        <th>chon</th>
+                    </tr>
+                </thead>
+                <tbody> -->
+                    <!-- <tr>
+                        <td style="display: flex; align-items: center;"><img style="width: 100px; height: 100px;" src="./assets/img/combo1.jpg" alt="">combo1</td>
+                        <td><p><span>320.000</span><sup>d</sup></p></td>
+                        <td><input style="width: 50px; outline: none;" type="number" value="1" min="0"></td>
+                        <td style="cursor: pointer;">Xoa</td>
+                    </tr>
+                    <tr>
+                        <td style="display: flex; align-items: center;"><img style="width: 100px; height: 100px;" src="./assets/img/combo2.jpg" alt="">combo1</td>
+                        <td><p><span>320.000</span><sup>d</sup></p></td>
+                        <td><input style="width: 50px; outline: none;" type="number" value="1" min="1"></td>
+                        <td style="cursor: pointer;">Xoa</td>
+                    </tr> -->
+                <!-- </tbody>
+            </table>
+            <div class="price-total" style="text-align: right;">
+                <p style="font-weight: bold;">Tong Tien: <strong>$ </strong><span>0</span></p>
+            </div>
+            <p id="thongbaothanhtoan" class="text-center"><a class="btn btn-success"> Check Out</a></p>
+        </form> -->
+<!-- 
+    </section> -->
 
     <!-- Start Brands -->
     <section class="bg-light py-5">
@@ -923,6 +957,7 @@
     <script src="./assets/js/custom.js"></script>
     <script src="./assets/js/cart.js"></script>
     <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/cartcount.js"></script>
     <!-- End Script -->
 </body>
 
