--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="shop.html"><img src="./assets/img/sanpham1.jpg" class="rounded-circle img-fluid border"></a>
                 <h5 class="text-center mt-3 mb-3" style="margin-left: -60px;">Toothbrush</h5>
-                <p class="text-center"><a class="btn btn-success" style="margin-left: -60px;"> Shop Now</a></p>
+                <p class="text-center"><a href="shop.html" class="btn btn-success" style="margin-left: -60px;"> Shop Now</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="shop.html"><img src="./assets/img/sanpham2.jpg" class="rounded-circle img-fluid border"></a>
                 <h2 class="h5 text-center mt-3 mb-3" style="margin-left: -60px;">Toothpaste</h2>
-                <p class="text-center"><a class="btn btn-success" style="margin-left: -60px;"> Shop Now</a></p>
+                <p class="text-center"><a href="shop.html" class="btn btn-success" style="margin-left: -60px;"> Shop Now</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="shop.html"><img src="./assets/img/sanpham3.jpg" class="rounded-circle img-fluid border"></a>
                 <h2 class="h5 text-center mt-3 mb-3" style="margin-left: -60px;">Mouthwash</h2>
-                <p class="text-center"><a class="btn btn-success" style="margin-left: -60px;"> Shop Now</a></p>
+                <p class="text-center"><a href="shop.html" class="btn btn-success" style="margin-left: -60px;"> Shop Now</a></p>
             </div>
         </div>
     </section>
@@ -351,12 +351,8 @@
                     </div>
                 </div>
             </div>
-            <div class="hero__row" style="text-align: center ">
-                <a href="#!" class="btn"  style="border-radius: 999px; background-color: #79F1A4; border: black; line-height: 20px;
-                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" ><h4>Book Online</h4></a>
-                <span class="hero__phone">
-                -or call 0362061339
-                </span>
+            <div class="col d-grid" >
+                <button type="submit" class="btn btn-success btn-lg" name="submit" value="buy">Book Online</button></a>
             </div>
         </div>
     </section>
@@ -375,14 +371,14 @@
             <div class="row">
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="post1.html">
                             <img src="./assets/img/benhrangmieng6.jpg" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li class="text-muted text-right">3 days</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Natural Ways to Cure Toothache, Easy to Do</a>
+                            <a href="post1.html" class="h2 text-decoration-none text-dark">Natural Ways to Cure Toothache, Easy to Do</a>
                             <p class="card-text">
                                 Putting hot or cold water in your mouth can shock your already sensitive teeth. Gargling with salt water will help a lot.
                             </p>
@@ -392,14 +388,14 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="post2.html">
                             <img src="./assets/img/benhrangmieng5.jpg" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li class="text-muted text-right"> 1 weeks </li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">What Is Dry Mouth, How To Treat It?</a>
+                            <a href="post2.html" class="h2 text-decoration-none text-dark">What Is Dry Mouth, How To Treat It?</a>
                             <p class="card-text">
                                 Dry mouth is a condition in which you do not have enough saliva to keep the oral cavity moist. We all experience dry mouth, especially when worried, sad or stressed...
                             </p>
@@ -409,14 +405,14 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="post3.html">
                             <img src="./assets/img/benhrangmieng4.jpg" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li class="text-muted text-right">2 weeks</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Brushing Toddlers: How can I help my 2-year-old learn to brush?</a>
+                            <a href="post3.html" class="h2 text-decoration-none text-dark">Brushing Toddlers: How can I help my 2-year-old learn to brush?</a>
                             <p class="card-text">
                                 Proper oral hygiene is an important habit from the moment a child's first tooth erupts, but it may not be easy by the time a child is 2 years old...
                             </p>
@@ -426,14 +422,14 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="post4.html">
                             <img src="./assets/img/benhrangmieng3.jpg" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li class="text-muted text-right">3 weeks</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Causes of tooth decay, How to prevent tooth decay effectively?</a>
+                            <a href="post4.html" class="h2 text-decoration-none text-dark">Causes of tooth decay, How to prevent tooth decay effectively?</a>
                             <p class="card-text">
                                 Tooth decay is a condition in which the hard tissue of the teeth is lost due to the mineral loss process, caused by bacteria in dental plaque and the formation of small holes in the teeth...
                             </p>
@@ -443,14 +439,14 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="post5.html">
                             <img src="./assets/img/benhrangmieng2.jpg" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li class="text-muted text-right">3 weeks</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">How many teeth do adults have and how many types?</a>
+                            <a href="post5.html" class="h2 text-decoration-none text-dark">How many teeth do adults have and how many types?</a>
                             <p class="card-text">
                                 Not everyone has enough 32 teeth, some people have enough or lack because wisdom teeth may not grow.
                             </p>
@@ -460,14 +456,14 @@
                 </div>
                 <div class="col-12 col-md-4 mb-4">
                     <div class="card h-100">
-                        <a href="shop-single.html">
+                        <a href="post6.html">
                             <img src="./assets/img/benhrangmieng1.jpg" class="card-img-top" alt="...">
                         </a>
                         <div class="card-body">
                             <ul class="list-unstyled d-flex justify-content-between">
                                 <li class="text-muted text-right">1 month</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Remedies for bad breath and effective ways to prevent it</a>
+                            <a href="post6.html" class="h2 text-decoration-none text-dark">Remedies for bad breath and effective ways to prevent it</a>
                             <p class="card-text">
                                 Top 4 effective and safe bad breath drugs today: Breath Pearls, Detoxic, Detoxant, Bactefort...
                             </p>
