--- a/cart.html
+++ b/cart.html
@@ -150,16 +150,16 @@
         </div>
     </div>
     <section class="cart" style="margin-top: 70px;">
-        <h2>Gio Hang</h2>
+        <h2>Cart</h2>
         <hr>
         <form action="">
             <table>
                 <thead>
                     <tr>
-                        <th> san pham</th>
-                        <th>gia</th>
-                        <th>so luong</th>
-                        <th>chon</th>
+                        <th>Product</th>
+                        <th>Price</th>
+                        <th>Quantity</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -178,7 +178,7 @@
                 </tbody>
             </table>
             <div class="price-total" style="text-align: right;">
-                <p style="font-weight: bold;">Tong Tien: <strong>$ </strong><span>0</span></p>
+                <p style="font-weight: bold;">Total amount: <strong>$ </strong><span>0</span></p>
             </div>
             <p id="thongbaothanhtoan" class="text-center"><a class="btn btn-success"> Check Out</a></p>
         </form>
