--- a/post4.html
+++ b/post4.html
@@ -264,7 +264,7 @@
                             </p>
                            <h6>What causes tooth decay?</h6>
                            <p>
-                                <img src="./assets/img/saurang.avif" alt="" height="350px" width="710px">
+                                <img src="./assets/img/saurang.avif" alt="" height="350px" width="100%">
                                 When you eat foods that contain carbohydrates (sugars and starches), these carbohydrates are eaten by bacteria that stick to plaque, which in turn produces acids that damage teeth. Over time, enamel begins to break down below the tooth surface while the tooth surface remains intact. When the enamel layer below the surface is eroded, the tooth surface collapses, forming a cavity
                            </p>
                            <h6>Causes of tooth decay: </h6>
@@ -280,7 +280,7 @@
                             Symptoms and signs of tooth decay:
                            </h6>
                            <p>
-                               <img src="./assets/img/saurang1.avif" alt="" height="350px" width=" 710px">
+                               <img src="./assets/img/saurang1.avif" alt="" height="350px" width="100%">
                                Although often you will feel certain pain stemming from tooth decay. But other visual and sensory factors can also help you determine if tooth decay has formed. According to the Mayo Medical Center, common symptoms of tooth decay include:
                                           <br>
                                        -The change in color on teeth. It can be black, brown or white. <br>
@@ -310,7 +310,7 @@
                             How to prevent tooth decay effectively: 
                            </h6>
                            <p>
-                            <img src="./assets/img/sau-rang-3-vi-vn.avif" alt="" height="350 px" width=" 710px">
+                            <img src="./assets/img/sau-rang-3-vi-vn.avif" alt="" height="350 px" width="100%">
                             Tooth decay can turn your life upside down. Therefore, if the tooth has not been decayed, prevent it now, by the following ways:
                                     <br>
                               -Brush at least twice a day and floss daily to remove plaque between teeth and below the gum line. <br>
