--- a/post5.html
+++ b/post5.html
@@ -251,7 +251,7 @@
 
                             <h6>How many teeth does an adult have?</h6>
                             <p>
-                                <img src="./assets/img/baonhiurang.avif" alt="" height="350px" width="710px">
+                                <img src="./assets/img/baonhiurang.avif" alt="" height="350px" width="100%">
                                 How many teeth are there? In fact, adults have a total of 32 teeth, including 4 wisdom teeth, however, the time when wisdom teeth erupt is different for each person and not everyone has full 32 teeth. <br>
 
                                 -When children start teething around 6 to 8 months old, 2 lower front teeth appear. The baby teeth turn in 20 full teeth until 3 years old. <br>
