--- a/about.html
+++ b/about.html
@@ -42,161 +42,93 @@
         </div>
     </div>
  <!-- Start Top Nav -->
- <nav class="navbar navbar-expand-lg navbar-light shadow" style="position: fixed; z-index: 3; top: 0;left: 0; right: 0;
- background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
- " >
-     <div class="container d-flex justify-content-between align-items-center">
-
-         <a class="navbar-brand text-success logo h1 align-self-center, rung" href="index.html" style="font-family: cursive;">
-                32smiles
-         </a>
-
-         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-             <span class="navbar-toggler-icon"></span>
-         </button>
-
-         <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="templatemo_main_nav">
-             <div class="flex-fill">
-                 <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
-                     <li class="nav-item">
-                         <a class="nav-link" href="index.html">Home</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link" href="about.html">About</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link" href="shop.html">Shop</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link" href="contact.html">Contact</a>
-                     </li>
-                 </ul>
-             </div>
-             <div class="navbar align-self-center d-flex">
-                 <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
-                     <div class="input-group">
-                         <input type="text" class="form-control" id="inputMobileSearch" placeholder="Search ...">
-                         <div class="input-group-text">
-                             <i class="fa fa-fw fa-search"></i>
-                         </div>
-                     </div>
-                 </div>
-                 <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
-                     <i class="fa fa-fw fa-search text-dark mr-2"></i>
-                 </a>
-                 <a class="nav-icon position-relative text-decoration-none" href="cart.html">
-                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                     <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"><span id="item-count"></span></span>
-                 </a>
-                 <a class="nav-icon position-relative text-decoration-none" href="#">
-                     <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                     <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
-                 </a>
-             </div>
-             <div style="margin-left: 170px;">
-                 <div style="display: inline-block;">
-                    <a href="#" style="text-decoration: none; font-weight: 200;" id="loginLink">Log In</a>
-                    <div class="overlay"></div>
-<div class="popup">
-<div class="form-structor">
-<div class="signup">
-  <h2 class="form-title" id="signupTitle"><span>or</span>Sign up</h2>
-  <div class="form-holder">
-    <input type="text" class="input" placeholder="Name" name="name" id="nameInput" />
-    <input type="email" class="input" placeholder="Email" name="email" id="emailInput" />
-    <input type="password" class="input" placeholder="Password" name="password" id="passwordInput" />
-  </div>
-  <button class="submit-btn" id="signupButton">Sign up</button>
-</div>
-<div class="login slide-up">
-  <div class="center">
-    <h2 class="form-title" id="loginTitle"><span>or</span>Log in</h2>
-    <div class="form-holder">
-      <input type="email" class="input" placeholder="Email" id="loginEmailInput" />
-      <input type="password" class="input" placeholder="Password" id="loginPasswordInput" />
-    </div>
-    <button class="submit-btn" id="loginButton">Log in</button>
-  </div>
-</div>
-</div>
-</div>
-                 </div>
-            </div>
-         </div>
-
-     </div>
- </nav>
-<!-- Close Top Nav -->
-
-
-<!-- Header -->
+ 
+<!-- Close Header -->
 <nav class="navbar navbar-expand-lg navbar-light shadow" style="position: fixed; z-index: 3; top: 0;left: 0; right: 0;
-background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-" >
-    <div class="container d-flex justify-content-between align-items-center">
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    " >
+        <div class="container d-flex justify-content-between align-items-center">
 
-        <a class="navbar-brand text-success logo h1 align-self-center,rung" href="index.html" style="font-family: cursive;">
-               32smiles
-        </a>
+            <a class="navbar-brand text-success logo h1 align-self-center, rung" href="index.html" style="font-family: cursive;">
+                   32smiles
+            </a>
 
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav"
-         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#templatemo_main_nav"
+             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="templatemo_main_nav">
-            <div class="flex-fill">
-                <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="shop.html">Shop</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="navbar align-self-center d-flex">
-                <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
-                    <div class="input-group">
-                        <input type="text" class="form-control" id="inputMobileSearch" placeholder="Search ...">
-                        <div class="input-group-text">
-                            <i class="fa fa-fw fa-search"></i>
+            <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between" id="templatemo_main_nav">
+                <div class="flex-fill">
+                    <ul class="nav navbar-nav d-flex justify-content-between mx-lg-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shop.html">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="navbar align-self-center d-flex">
+                    <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="inputMobileSearch" placeholder="Search ...">
+                            <div class="input-group-text">
+                                <i class="fa fa-fw fa-search"></i>
+                            </div>
                         </div>
                     </div>
+                    <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
+                        <i class="fa fa-fw fa-search text-dark mr-2"></i>
+                    </a>
+                    <a class="nav-icon position-relative text-decoration-none" href="cart.html">
+                        <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
+                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"><span id="item-count"></span></span>
+                    </a>
+                    <a class="nav-icon position-relative text-decoration-none" href="#">
+                        <i class="fa fa-fw fa-user text-dark mr-3"></i>
+                        <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                    </a>
                 </div>
-                <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal" data-bs-target="#templatemo_search">
-                    <i class="fa fa-fw fa-search text-dark mr-2"></i>
-                </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                    <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">99</span>
-                </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                    <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
-                </a>
+                <div style="margin-left: 170px;">
+                    <div style="display: inline-block;">
+                       <a href="#" style="text-decoration: none; font-weight: 200;" id="loginLink">Log In</a>
+                       <div class="overlay"></div>
+<div class="popup">
+ <div class="form-structor">
+   <div class="signup">
+     <h2 class="form-title" id="signupTitle"><span>or</span>Sign up</h2>
+     <div class="form-holder">
+       <input type="text" class="input" placeholder="Name" name="name" id="nameInput" />
+       <input type="email" class="input" placeholder="Email" name="email" id="emailInput" />
+       <input type="password" class="input" placeholder="Password" name="password" id="passwordInput" />
+     </div>
+     <button class="submit-btn" id="signupButton">Sign up</button>
+   </div>
+   <div class="login slide-up">
+     <div class="center">
+       <h2 class="form-title" id="loginTitle"><span>or</span>Log in</h2>
+       <div class="form-holder">
+         <input type="email" class="input" placeholder="Email" id="loginEmailInput" />
+         <input type="password" class="input" placeholder="Password" id="loginPasswordInput" />
+       </div>
+       <button class="submit-btn" id="loginButton">Log in</button>
+     </div>
+   </div>
+ </div>
+</div>
+                    </div>
+               </div>
             </div>
-            <div style="margin-left: 170px;">
-                 <div style="display: inline-block;">
-                    <a href="#!" style="text-decoration: none; font-weight: 200;">Log In</a>
-                 </div>
-                 <div style="display: inline-block; margin-left: 20px;">
-                    <a href="#!" style="text-decoration: none;">Sign Up</a>
-                 </div>
-            </div>
+
         </div>
-
-    </div>
-</nav>
-<!-- Close Header -->
-
+    </nav>
 <!-- Modal -->
 <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
@@ -214,19 +146,17 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     </div>
 </div>
 
-    <section class="bg-success py-5">
+    <section class="bg-success py-5" style="height: 780px; margin-top: 5px;background-image: linear-gradient( 135deg, #79F1A4 10%, #0E5CAD 100%)" >
         <div class="container">
             <div class="row align-items-center py-5">
                 <div class="col-md-8 text-white">
-                    <h1>About Us</h1>
+                    <h1 style="text-align: center;">About Us</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <h6 style="font-size: 20px;">Thank you for your interest in 32 smiles. We include experienced, enthusiastic professionals... Oral health care products, educational propaganda articles. Hope all of the above will help improve the oral health of you and your family.</h6>
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="assets/img/about-hero.svg" alt="About Hero">
+                    <video src="./assets/img/about.mp4" loop muted autoplay width="380px" height="670px" preload="metadata" autoplay="autoplay" style="margin-left: auto; margin-right: auto;">
                 </div>
             </div>
         </div>
@@ -239,9 +169,7 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             <div class="col-lg-6 m-auto">
                 <h1 class="h1">Our Services</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    Lorem ipsum dolor sit amet.
-                </p>
+                   We provide the most exceptional customer care services. Thank you for using our service. Looking forward to receiving customer's contribution to our service to be better
             </div>
         </div>
         <div class="row">
@@ -270,7 +198,7 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
                     <div class="h1 text-success text-center"><i class="fa fa-user"></i></div>
-                    <h2 class="h5 mt-4 text-center">24 Hours Service</h2>
+                    <h2 class="h5 mt-4 text-center">Consultants</h2>
                 </div>
             </div>
         </div>
