--- a/about.html
+++ b/about.html
@@ -146,17 +146,17 @@
     </div>
 </div>
 
-    <section class="bg-success py-5" style="height: 780px; margin-top: 5px;background-image: linear-gradient( 135deg, #79F1A4 10%, #0E5CAD 100%)" >
-        <div class="container">
-            <div class="row align-items-center py-5">
-                <div class="col-md-8 text-white">
+    <section class="bg-success py-5" style="height: 780px;width: 100%; margin-top: 5px;background-image: linear-gradient( 135deg, #79F1A4 10%, #0E5CAD 100%)" >
+        <div class="container" style="height:105%;width: 100%;">
+            <div class="row align-items-center py-5" style="height:100%;width: 100%;">
+                <div class="col-md-8 text-white" style="height:110%;width: 50%">
                     <h1 style="text-align: center;">About Us</h1>
                     <p>
                         <h6 style="font-size: 20px;">Thank you for your interest in 32 smiles. We include experienced, enthusiastic professionals... Oral health care products, educational propaganda articles. Hope all of the above will help improve the oral health of you and your family.</h6>
                     </p>
                 </div>
-                <div class="col-md-4">
-                    <video src="./assets/img/about.mp4" loop muted autoplay width="380px" height="670px" preload="metadata" autoplay="autoplay" style="margin-left: auto; margin-right: auto;">
+                <div class="col-md-4" style="width: 50%; height: 110%;" >
+                   <video src="./assets/img/about.mp4" loop muted autoplay width="100%" height="100%" preload="metadata" autoplay="autoplay" style="margin-left: auto; margin-right: auto;">
                 </div>
             </div>
         </div>
