--- a/index.html
+++ b/index.html
@@ -584,14 +584,14 @@
     <!-- End Footer -->
 
     <!-- Start Script -->
-    <script src="assets/js/jquery-1.11.0.min.js"></script>
-    <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/templatemo.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <script src="/assets/js/login.js"></script>
-    <script src="/assets/js/cart.js"></script>
-    <script src="/assets/js/cartcount.js"></script>
+    <script src="./assets/js/jquery-1.11.0.min.js"></script>
+    <script src="./assets/js/jquery-migrate-1.2.1.min.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/templatemo.js"></script>
+    <script src="./assets/js/custom.js"></script>
+    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/cartcount.js"></script>
     <!-- End Script -->
 </body>
 
