--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
     <link rel="apple-touch-icon" href="assets/img/apple-icon.png">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/templatemo.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/templatemo.css">
+    <link rel="stylesheet" href="./assets/css/custom.css">
 
     <!-- Load fonts style after rendering the layout styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
+    <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdn.leanhduc.pro.vn/utilities/animation/shake-effect/style.css"/>
     <link rel="stylesheet" href="./assets/css/login.css">
 
@@ -201,7 +201,7 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
                 </div>
                 <div class="row">
                     <div class="col text-end mt-2">
-                        <button type="submit" class="btn btn-success btn-lg px-3">Let’s Talk</button>
+                        <button type="submit" class="btn btn-success btn-lg px-3" id="contact">Let’s Talk</button>
                     </div>
                 </div>
             </form>
@@ -224,11 +224,11 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
                         </li>
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel:010-020-0340">0362061339</a>
+                            <a class="text-decoration-none" href="tel:0362061339">0362061339</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope fa-fw"></i>
-                            <a class="text-decoration-none" href="mailto:info@company.com">app@company.com</a>
+                            <a class="text-decoration-none" href="mailto:vannghinguyen152001@gmail.com">app@company.com</a>
                         </li>
                     </ul>
                 </div>
@@ -315,14 +315,14 @@ background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     <!-- End Footer -->
 
     <!-- Start Script -->
-    <script src="assets/js/jquery-1.11.0.min.js"></script>
-    <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/templatemo.js"></script>
-    <script src="assets/js/custom.js"></script>
-    <script src="/assets/js/login.js"></script>
-    <script src="/assets/js/cart.js"></script>
-    <script src="/assets/js/cartcount.js"></script>
+    <script src="./assets/js/jquery-1.11.0.min.js"></script>
+    <script src="./assets/js/jquery-migrate-1.2.1.min.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/templatemo.js"></script>
+    <script src="./assets/js/custom.js"></script>
+    <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/cart.js"></script>
+    <script src="./assets/js/cartcount.js"></script>
     <!-- End Script -->
 </body>
 
